test/meson.build: add another missing dependency on libevent.a
Necessary for including Client.hxx.

--- a/test/meson.build
+++ b/test/meson.build
@@ -288,6 +288,7 @@ if enable_database
       '../src/LocateUri.cxx',
       include_directories: inc,
       dependencies: [
+        event_dep,
         log_dep,
         tag_dep,
         fs_dep,
