--- a/meson_options.txt
+++ b/meson_options.txt
@@ -201,6 +201,6 @@ option('yajl', type: 'feature', description: 'libyajl for YAML support')
 option('zlib', type: 'feature', description: 'zlib support (for database compression)')
 
 option('zeroconf', type: 'combo',
-       choices: ['auto', 'avahi', 'disabled'],
+       choices: ['auto', 'avahi', 'bonjour', 'disabled'],
        value: 'auto',
        description: 'Zeroconf support')
