Add prcr2 dependency to macos workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -164,6 +164,7 @@ jobs:
               ccache
               fmt
               googletest
+              pcre2
               icu4c
               ffmpeg
               libnfs
