Install some more dependencies in the macos workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -161,7 +161,9 @@ jobs:
             cxx: clang++
             brew_packages: >
               meson ninja
+              pkgconf
               ccache
+              expat
               fmt
               googletest
               pcre2
@@ -177,6 +179,7 @@ jobs:
               opus
               libvorbis
               faad2
+              sqlite
               wavpack
               libmpdclient
             meson_options: --force-fallback-for=fmt,gtest
