--- a/doc/mpdconf.example
+++ b/doc/mpdconf.example
@@ -98,6 +98,13 @@
 #
 #log_level			"notice"
 #
+# The timestamp prefixed to log lines when written to a log file
+# or to stdout (but not when written to syslog or to systemd log).
+# Available setting arguments are "none", "minutes", "seconds",
+# and "milliseconds".
+#
+#log_timestamp		"seconds"
+#
 # Setting "restore_paused" to "yes" puts MPD into pause mode instead
 # of starting playback after startup.
 #
