Fix deamon mode on macos

--- a/meson.build
+++ b/meson.build
@@ -437,6 +437,12 @@ if is_windows
   ]
 endif
 
+if is_darwin
+  sources += [
+    'src/apple/AppleMain.cxx',
+  ]
+endif
+
 if not is_android
   sources += [
     'src/CommandLine.cxx',
