--- a/android/.gitignore
+++ b/android/.gitignore
@@ -1,12 +1,18 @@
 *.iml
 .gradle
 /local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+## ignoring .idea completely
+#  until a good reason emerges not to
+/.idea
+##--
+## moved the following into .idea/.gitignore
+#/.idea/caches
+#/.idea/libraries
+#/.idea/modules.xml
+#/.idea/workspace.xml
+#/.idea/navEditor.xml
+#/.idea/assetWizardSettings.xml
+## --
 .DS_Store
 /build
 /captures
