meson.build: suppress -Wmissing-field-initializers
There's nothing wrong with initializing only some fields.

--- a/meson.build
+++ b/meson.build
@@ -171,6 +171,8 @@ test_cxxflags = test_common_flags + [
   '-Wvolatile',
   '-Wvirtual-inheritance',
 
+  '-Wno-missing-field-initializers',
+
   # a vtable without a dtor is just fine
   '-Wno-non-virtual-dtor',
 
