subprojects: add libsndfile.wrap

--- a/meson.build
+++ b/meson.build
@@ -24,6 +24,7 @@ project(
     'libmicrohttpd:default_library=static',
     'libmpdclient:default_library=static',
     'libnpupnp:default_library=static',
+    'libsndfile:default_library=static',
     'liburing:default_library=static',
     'ogg:default_library=static',
     'openssl:default_library=static',
@@ -46,6 +47,7 @@ project(
     'lame:warning_level=0',
     'libmicrohttpd:warning_level=0',
     'libnpupnp:warning_level=0',
+    'libsndfile:warning_level=0',
     'liburing:warning_level=0',
     'sqlite3:warning_level=0',
     'ogg:werror=false',
