meson.build: disable unnecessary libsndfile features

--- a/meson.build
+++ b/meson.build
@@ -90,6 +90,10 @@ project(
     'lame:tools=disabled',
     'libmpdclient:documentation=false',
     'libmpdclient:test=false',
+    'libsndfile:external_libs=disabled',
+    'libsndfile:mpeg=disabled',
+    'libsndfile:programs=false',
+    'libsndfile:sndio=disabled',
     'openssl:build_cli=false',
     'openssl:asm=disabled',
     'opus:docs=disabled',
