.github/workflows/build.yml: run unit tests on Windows
The unit tests currently fail on Windows.  That needs to be fixed, but
good to know that there are problems currently.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -320,3 +320,6 @@ jobs:
 
       - name: Build
         run: meson compile -C "${{github.workspace}}/build" --verbose
+
+      - name: Unit Tests
+        run: meson test -C "${{github.workspace}}/build" --print-errorlogs
