--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -43,16 +43,11 @@ jobs:
         with:
           key: android
 
-      # todo: remove once NDK 27 is out of beta
-      - name: Install Beta NDK
-        run: |
-          echo y | ${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager "ndk;27.0.12077973"
-            
       - name: Build
         run: |
           mkdir -p output/android
           cd ./output/android
-          ../../android/build.py $ANDROID_SDK_ROOT $ANDROID_SDK_ROOT/ndk/27.0.12077973 arm64-v8a \
+          ../../android/build.py $ANDROID_SDK_ROOT $ANDROID_NDK_HOME arm64-v8a \
             --buildtype=debugoptimized -Db_ndebug=true \
             -Dwrap_mode=forcefallback 
 
