system/linux/meson.build: add configure-time check for openat2()
Closes https://github.com/MusicPlayerDaemon/MPD/issues/2242

--- a/meson.build
+++ b/meson.build
@@ -486,6 +486,7 @@ subdir('src/fs')
 subdir('src/io')
 subdir('src/io/uring')
 subdir('src/system')
+subdir('src/system/linux')
 subdir('src/thread')
 subdir('src/net')
 subdir('src/event')
