subprojects/id3tag: add missing dependency on zlib

--- a/subprojects/packagefiles/id3tag/meson.build
+++ b/subprojects/packagefiles/id3tag/meson.build
@@ -32,5 +32,8 @@ libid3tag = static_library(
 
 libid3tag_dep = declare_dependency(
   link_with: libid3tag,
+  dependencies: [
+    dependency('zlib'),
+  ],
   include_directories: include_directories('.'),
 )
