--- a/meson_options.txt
+++ b/meson_options.txt
@@ -197,7 +197,7 @@ option('icu', type: 'feature', description: 'Use libicu for Unicode')
 option('iconv', type: 'feature', description: 'Use iconv() for character set conversion')
 option('pcre', type: 'feature', description: 'Enable regular expression support (using libpcre)')
 option('sqlite', type: 'feature', description: 'SQLite database support (for stickers)')
-option('yajl', type: 'feature', description: 'libyajl for YAML support')
+option('yajl', type: 'feature', description: 'libyajl for JSON support')
 option('zlib', type: 'feature', description: 'zlib support (for database compression)')
 
 option('zeroconf', type: 'combo',
