lib/curl/StringHandler: new class

--- a/src/lib/curl/meson.build
+++ b/src/lib/curl/meson.build
@@ -22,6 +22,7 @@ curl = static_library(
   'Adapter.cxx',
   'Escape.cxx',
   'Form.cxx',
+  'StringHandler.cxx',
   include_directories: inc,
   dependencies: [
     event_dep,
