io/uring/meson.build: require liburing 2.3
This version added IORING_SETUP_SINGLE_ISSUER.  We could add an
`#ifdef` for that, but just requiring 2.3 is simpler and so far nobody
has complained about build failures.

--- a/src/io/uring/meson.build
+++ b/src/io/uring/meson.build
@@ -10,6 +10,7 @@ if host_machine.system() != 'linux' or is_android
 endif
 
 liburing = dependency('liburing',
+                      version: '>= 2.3',
                       include_type: 'system',
                       required: get_option('io_uring'))
 uring_features.set('HAVE_URING', liburing.found())
