lib/icu/meson.build: move ICU macros to lib/icu/Features.h
Decouple this from the global config.h so users need to recompile
fewer parts of MPD after a configuration change.

--- a/src/lib/icu/meson.build
+++ b/src/lib/icu/meson.build
@@ -1,7 +1,9 @@
+icu_features = configuration_data()
+
 icu_i18n_dep = dependency('icu-i18n', version: '>= 50', required: get_option('icu'))
 icu_uc_dep = dependency('icu-uc', version: '>= 50', required: get_option('icu'))
 have_icu = icu_i18n_dep.found() and icu_uc_dep.found()
-conf.set('HAVE_ICU', have_icu)
+icu_features.set('HAVE_ICU', have_icu)
 
 icu_sources = [
   'Canonicalize.cxx',
@@ -25,7 +27,7 @@ if have_icu
   ]
 else
   iconv_dep = dependency('iconv', required: get_option('iconv'))
-  conf.set('HAVE_ICONV', iconv_dep.found())
+  icu_features.set('HAVE_ICONV', iconv_dep.found())
 endif
 
 icu = static_library(
@@ -46,3 +48,5 @@ icu_dep = declare_dependency(
     util_dep,
   ],
 )
+
+configure_file(output: 'Features.h', configuration: icu_features)
