--- a/src/net/meson.build
+++ b/src/net/meson.build
@@ -1,7 +1,9 @@
+net_features = configuration_data()
+
 net_sources = []
 
 have_tcp = get_option('tcp')
-conf.set('HAVE_TCP', have_tcp)
+net_features.set('HAVE_TCP', have_tcp)
 
 if have_tcp
   net_sources += [
@@ -23,14 +25,14 @@ if have_tcp and not get_option('ipv6').disabled()
 else
   have_ipv6 = false
 endif
-conf.set('HAVE_IPV6', have_ipv6)
+net_features.set('HAVE_IPV6', have_ipv6)
 
 have_local_socket = not is_windows and get_option('local_socket')
-conf.set('HAVE_UN', have_local_socket)
+net_features.set('HAVE_UN', have_local_socket)
 
 if have_local_socket
-  conf.set('HAVE_STRUCT_UCRED', compiler.has_header_symbol('sys/socket.h', 'struct ucred') and compiler.has_header_symbol('sys/socket.h', 'SO_PEERCRED'))
-  conf.set('HAVE_GETPEEREID', compiler.has_function('getpeereid'))
+  net_features.set('HAVE_STRUCT_UCRED', compiler.has_header_symbol('sys/socket.h', 'struct ucred') and compiler.has_header_symbol('sys/socket.h', 'SO_PEERCRED'))
+  net_features.set('HAVE_GETPEEREID', compiler.has_function('getpeereid'))
   net_sources += 'LocalSocketAddress.cxx'
 endif
 
@@ -65,3 +67,5 @@ net_dep = declare_dependency(
     io_dep,
   ],
 )
+
+configure_file(output: 'Features.hxx', configuration: net_features)
