tag/GenParseName: write to stdout, tell Meson to capture it
This simplifies GenParseName.cxx because we no longer need to create
the output file.

--- a/src/tag/meson.build
+++ b/src/tag/meson.build
@@ -8,8 +8,9 @@ generate_parse_name = executable(
 parse_name_cxx = custom_target(
   'RunGenParseName',
   output: ['ParseName2.cxx'],
+  capture: true,
   command : [
-    generate_parse_name, '@OUTPUT@',
+    generate_parse_name,
   ],
 )
 
