Add: test program to fetch and parse audio CD info from Musicbrainz.
2 ids given in test script.
(test program to output id from a loaded CD will come next)

--- a/test/meson.build
+++ b/test/meson.build
@@ -642,4 +642,22 @@ if alsa_dep.found()
   )
 endif
 
+#
+# Musicbrainz
+#
+
+if curl_dep.found() and expat_dep.found()
+  executable(
+    'MusicbrainzFetch',
+    'MusicbrainzFetch.cxx',
+    'ShutdownHandler.cxx',
+    include_directories: inc,
+    dependencies: [
+      curl_dep,
+      event_dep,
+      expat_dep,
+    ],
+  )
+endif
+
 subdir('fs')
