Implement diacritics stripping and string normalization command

--- a/meson.build
+++ b/meson.build
@@ -381,6 +381,7 @@ sources = [
   'src/client/Response.cxx',
   'src/client/ThreadBackgroundCommand.cxx',
   'src/client/ProtocolFeature.cxx',
+  'src/client/StringNormalization.cxx',
   'src/Listen.cxx',
   'src/LogInit.cxx',
   'src/ls.cxx',
