io/meson.build: move libio_fs.a build rule to io/fs/meson.build
Prepare to work around the circular dependency between fs/meson.build
and io/meson.build.

--- a/meson.build
+++ b/meson.build
@@ -481,6 +481,7 @@ subdir('src/time')
 subdir('src/lib/icu')
 subdir('src/fs')
 subdir('src/io')
+subdir('src/io/fs')
 subdir('src/io/uring')
 subdir('src/system')
 subdir('src/system/linux')
