song/DirectorySongFilter: new filter
Adds a new filter `directory` similar to `base` but non-recursive.
See https://github.com/MusicPlayerDaemon/MPD/issues/2418

--- a/src/song/meson.build
+++ b/src/song/meson.build
@@ -5,6 +5,7 @@ song = static_library(
   'StringFilter.cxx',
   'UriSongFilter.cxx',
   'BaseSongFilter.cxx',
+  'DirectorySongFilter.cxx',
   'TagSongFilter.cxx',
   'ModifiedSinceSongFilter.cxx',
   'AddedSinceSongFilter.cxx',
